# gigaevo-memory

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TODO.md  openapi.yaml  pyproject.toml  start.sh  status.sh  stop.sh
.github/workflows/: ci.yml  migration-safety.yml  mirror.yml
api/: Dockerfile  pyproject.toml  pytest.ini
api/app/: auth.py  config.py  create_key.py  main.py  metrics.py  oidc.py
api/app/db/: __init__.py  alembic.ini  models.py  session.py
api/app/db/migrations/: env.py
api/app/db/migrations/versions/: 001_initial.py  002_memory_card_search_documents.py  003_library_metadata.py  004_api_keys.py  005_library_listing_index.py
api/app/events/: __init__.py  publisher.py
api/app/models/: __init__.py  requests.py  responses.py
api/app/routers/: __init__.py  agent_skills.py  agents.py  bulk.py  chains.py  dedup.py  embeddings.py  entities.py  events.py  health.py  memory_cards.py  steps.py  unified_search.py  versions.py
api/app/services/: __init__.py  api_key_service.py  diff_html.py  embedding_service.py  entity_service.py  search_document_service.py  unified_search_service.py  vector_utils.py
api/app/services/search_strategies/: __init__.py  base.py  bm25_strategy.py  hybrid_strategy.py  reranker.py  vector_strategy.py
api/tests/: conftest.py  test_agent_skill_content.py  test_agent_skill_entity_doc.py  test_agent_skills_auth_namespacing.py  test_agent_skills_router.py  test_agent_skills_router_library.py  test_agents_auth_namespacing.py  test_allowed_tools_filter.py  test_api_crud.py  test_api_iteration.py  test_api_key_auth.py  test_api_vector_search.py  test_api_versions.py  test_auth_dual_mode.py  test_auth_scopes.py  test_backup_script.py  test_bulk_auth_namespacing.py  test_bulk_save.py  test_care_chain_metadata.py  test_care_integration_doc.py  test_chain_dag_validation.py  test_chains_auth_namespacing.py  test_chains_router_library.py  test_clear_all_confirmation.py  test_cors.py  test_create_key_cli.py  test_cursor_pagination_routers.py  test_diff_html.py  test_differential_channel.py  test_embedding_service.py  test_embeddings.py  test_entity_service.py  test_events.py  test_events_firehose.py  test_evolution_meta.py  test_evolution_meta_doc.py  test_evolved_channel.py  test_generic_entity_version_number.py  test_health.py  test_health_enrichment.py  (+22 more)
client/python/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
client/python-meta/: README.md  pyproject.toml
client/python-meta/src/gigaevo_memory/: __init__.py
client/python/examples/: README.md  chain_v0.json  chain_v1.json  download_chain.py  memory_card_sample.json  memory_cards_demo.py  run_chain.py  update_chain.py  upload_chain.py  upload_memory_card.py
client/python/src/gigaevo_client/: __init__.py  _base.py  _compat.py  agent_skills.py  agents.py  cache.py  chains.py  client.py  config.py  exceptions.py  models.py  platform.py  platform_client.py  search_types.py  suite.py  watcher.py
client/python/src/gigaevo_memory/: __init__.py  _base.py  agents.py  chains.py  client.py  embeddings.py  memory_cards.py  models.py  platform_client.py  watcher.py
client/python/tests/: conftest.py  test_agent_skills.py  test_agent_skills_library_mixin.py  test_agents.py  test_allowed_tools_filter_client.py  test_bulk_save_client.py  test_cache.py  test_capability_matching.py  test_care_chain_metadata.py  test_chains_library_mixin.py  test_clear_all_confirmation.py  test_client.py  test_cursor_pagination_client.py  test_differential_channel_client.py  test_distribution_split.py  test_evolution_meta.py  test_exceptions.py  test_gigaevo_config.py  test_gigaevo_config_loaders.py  test_ingest_skill_from_carl.py  test_integration.py  test_library_mutations_client.py  test_lineage_client.py  test_memory_cards.py  test_package_rename.py  test_platform_client.py  test_roundtrip.py  test_search.py  test_semantic_dedup_client.py  test_versions.py  test_watch_entities.py  test_watcher.py
deploy/: .env.example  docker-compose.yml
deploy/nginx/: README.md
deploy/scripts/: backup.sh
docs/: AGENT_SKILL_ENTITY.md  CARE_INTEGRATION.md  CHAIN_CONTENT_CONVENTIONS.md  EVOLUTION_META.md
web_ui/: Dockerfile  pyproject.toml
web_ui/app/: __init__.py  client.py  library_format.py  main.py  themes.py
web_ui/app/pages/: __init__.py  agent_skills.py  agents.py  base.py  chains.py  maintenance.py  memory_cards.py  search.py  showcase.py  steps.py
web_ui/tests/: test_agent_skills_tab.py  test_library_format.py
