[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gigaevo-memory-web-ui"
version = "0.1.0"
description = "GigaEvo Memory Web UI - Gradio interface for memory management"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.44.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["app"]
